# rexmi_rl

./: .gitignore  README.md  pyproject.toml  run.sh  setup.cfg
assets/robots/go2w/urdf/: go2w.urdf
docs/: lunar_crater_demo_run.md  lunar_crater_terrain_research.md  project_roadmap.md  rl_setup.md
outputs/2026-06-13/17-01-59/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-13/17-05-22/.hydra/: hydra.yaml
outputs/2026-06-13/17-10-20/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-13/18-08-40/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-13/18-19-32/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-13/18-22-49/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-13/18-29-08/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-13/18-34-01/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-13/18-42-43/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-13/18-47-28/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-13/19-09-21/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-13/19-19-22/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-13/19-58-22/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-13/20-09-21/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-13/20-55-57/.hydra/: hydra.yaml
outputs/2026-06-13/21-01-57/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-13/21-11-12/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-13/22-35-12/.hydra/: hydra.yaml
outputs/2026-06-13/23-15-26/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-13/23-19-06/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-14/08-00-18/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-14/08-08-51/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-14/11-43-42/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-14/15-33-59/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-14/16-34-43/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-14/18-33-34/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-14/20-03-41/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-14/22-28-18/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-15/21-33-53/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-15/21-35-49/.hydra/: hydra.yaml
outputs/2026-06-15/21-40-16/.hydra/: hydra.yaml
scripts/: eval.py  play.py  process_lola_dem.py  train.py
source/rexmi_rl/: __init__.py
source/rexmi_rl/assets/: __init__.py  go2w.py
source/rexmi_rl/tasks/: __init__.py
(+135 files in other folders)
