# setup.cfg — Python package metadata for rexmi_rl
#
# This file tells pip how to install the rexmi_rl package.
# Run:  pip install -e source/rexmi_rl
#
# The "-e" flag installs in "editable" mode — Python imports the package
# directly from this source directory, so any code edits take effect
# immediately without re-installing.
#
# Why do we need to install the package?
# ----------------------------------------
# Isaac Lab discovers extension packages by scanning Python's site-packages
# for installed packages.  Without installation, "import rexmi_rl" would fail
# and gym.register() would never be called, so no environments would exist.

[metadata]
name = rexmi_rl
version = 0.1.0
description = REXMI RL — Reinforcement learning for a wheeled-legged quadruped on Isaac Lab
author = REXMI Project
license = BSD-3-Clause

[options]
# Tell pip where to find the Python source code
package_dir =
    = source

# Automatically discover all Python packages (folders with __init__.py)
# under the source/ directory
packages = find:

# Python version requirement
python_requires = >=3.10

# Runtime dependencies.
# isaaclab and isaaclab_tasks are installed with Isaac Lab itself.
# isaaclab_rl provides the RSL-RL runner config classes.
install_requires =
    isaaclab
    isaaclab_tasks
    isaaclab_rl

[options.packages.find]
# Search for packages starting from the source/ directory
where = source
